# dltrainBook

./: README.md
DLtrain/Algorithm/: CNNalgo.tex  ComputerProject.docx  Readme.md
DLtrain/Docker/: Dockerfile  Readme.md
DLtrain/Jetson-Nano/: Readme.md
DLtrain/Power9/: C++NNFast.code-workspace  CMakeLists.txt  FastSave.H  FastSave.cpp  FastTest.cpp  MNISTRead.H  MNISTRead.cpp  Network_Fast.H  Network_Fast.cpp  Readme.md  bitmapFile.cpp  jjnet
DLtrain/Ubuntu/C-ConvNov22/cpuInfer/: CMakeLists.txt  Readme.md
DLtrain/Ubuntu/C-ConvNov22/gpu/: CMakeLists.txt
DLtrain/Windows/: CNN.h  MNISTRead.H  MNISTRead.cpp  Readme.md  infermain.cpp  main.cpp  matrix.cpp  matrix.h  network_prop.txt
Data-Set/: Image-File-Handling.md  Readme.md  Rreadme.md
Data-Set/CSV/: Readme.md
Data-Set/DataForPretrainedModel/: PotatoLocalPretrained.ipynb  Readme.md
Data-Set/MNIST/: Readme.md
Data-Set/PotatoNode/: PotatoLeavesInference.ipynb  Readme.md
Data-Set/Pre-processing/: 2Dfilter.md  Global-Centering .md  Global-Standardization.md  Pixel-Normalization.md
Data-Set/fashionMNIST/: Readme.md
Data-Set/mnist4fileAndNPZ/: Readme.md
Data-Set/mnistLocal/: Readme.md  readMNISTdataAp9Y23.ipynb
Edge/FPGA/: Readme.md
Edge/J7app/: README.md
Edge/Kanshi/: README.md
Edge/PotatoNode/: PotatoLeavesInference.ipynb  Readme.md
Edge/PotatoPretrainedModel/: PotatoLocalPretrained.ipynb  Readme.md
Edge/Send2Phone/: Main.java  README.md
Model/: Readme.md
Model/Design/: Readme.md
Model/Load/: LoadModelV2.ipynb  (+2 more)
Tool-Set/: Readme.md
apk/: Readme.md  readme.md  settings.gradle
gpu/: Readme.md  addincpu.cpp  addingpu.cu  ex1.cu  ex4.py  ex5.py  vaddv1.cu
(+76 files in other folders)
